fixed navigation and ribbon alignment

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,5 @@
 @import './base.css';
+
+.uppercase {
+  text-transform: uppercase;
+}
